Updated Controllers