@@ -1,8 +1,6 @@
 package com.exhibitions.modernexhibitions.controller;
 
-import com.exhibitions.modernexhibitions.dto.ArtistDto;
-import com.exhibitions.modernexhibitions.dto.ArtistNetworkDto;
-import com.exhibitions.modernexhibitions.dto.YearlyArtistNetworkDto;
+import com.exhibitions.modernexhibitions.dto.*;
 import com.exhibitions.modernexhibitions.mapper.CustomNetworkMapper;
 import com.exhibitions.modernexhibitions.repository.projection.ArtistProjectionTotalNetwork;
 import com.exhibitions.modernexhibitions.repository.projection.ArtistProjectionYearlyNetwork;
@@ -11,6 +9,7 @@ import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -22,6 +21,7 @@ public class NetworkController {
     private final ModelMapper modelMapper;
     private final ArtistService artistService;
     private final CustomNetworkMapper customNetworkMapper;
+    private final static Integer[] YEARS = {1904,1905,1906,1907,1908,1909,1910,1911,1912,1913,1914,1915,1916};
 
     @Autowired
     public NetworkController(ModelMapper modelMapper, ArtistService artistService, CustomNetworkMapper customNetworkMapper){
@@ -56,17 +56,31 @@ public class NetworkController {
     public YearlyArtistNetworkDto getYearlyNetworkByIds(@RequestParam() List<Integer> ids,
                                                         @RequestParam(required = false, defaultValue = "0") Integer numExhibitions,
                                                         @RequestParam(required = false) Integer year) {
-        List<ArtistProjectionYearlyNetwork> artists = artistService.getNetworkByIds(ids,numExhibitions,year);
+        List<ArtistProjectionYearlyNetwork> artists = artistService.getYearlyNetworkByIds(ids,numExhibitions,year);
         return new YearlyArtistNetworkDto(artistService.getArtistsByIds(ids).stream()
                 .map(entity -> modelMapper.map(entity, ArtistDto.class))
                 .collect(Collectors.toList()), customNetworkMapper.artistsToYearlyLinkDtoList(artists));
+    }
+
+    @GetMapping("yearly/all")
+    public List<ArtistNetworkAllYearsDto> getAllYearlyNetworks(@RequestParam() List<Integer> ids,
+                                               @RequestParam(required = false, defaultValue = "0") Integer numExhibitions) {
+
+        List<ArtistDto> artistDtos = artistService.getArtistsByIds(ids).stream().
+                map(entity -> modelMapper.map(entity, ArtistDto.class)).toList();
+        List<ArtistNetworkAllYearsDto> networks = new ArrayList<>();
+        for (Integer y:YEARS) {
+            networks.add(new ArtistNetworkAllYearsDto(y, new YearlyArtistNetworkDto(artistDtos,
+                    customNetworkMapper.artistsToYearlyLinkDtoList(artistService.getYearlyNetworkByIds(ids,numExhibitions,y)))));
+        }
+        return networks;
     }
 
     @GetMapping("/{id}")
     public ArtistNetworkDto getEgoNetwork(@PathVariable Integer id,
                                           @RequestParam(required = false, defaultValue = "0") Integer numExhibitions) {
         List<ArtistProjectionTotalNetwork> artists = artistService.getTotalEgoNetworkOne(id,numExhibitions);
-        return new ArtistNetworkDto(artistService.getArtistsOfEgoNetwork(id,numExhibitions).stream().map(entity -> modelMapper.map(entity, ArtistDto.class)).collect(Collectors.toList()),
+        return new ArtistNetworkDto((artistService.getArtistsOfEgoNetwork(id,numExhibitions)).stream().map(entity -> modelMapper.map(entity, ArtistDto.class)).toList(),
                 customNetworkMapper.artistsToLinkDtoList(artists));
     }
 
@@ -85,6 +99,5 @@ public class NetworkController {
         return new ArtistNetworkDto(artistService.getArtistsByIds(ids).stream().map(entity -> modelMapper.map(entity, ArtistDto.class)).collect(Collectors.toList()),
                 customNetworkMapper.artistsToLinkDtoList(artists));
     }
-
 
 }
